--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
       <section class="hero section hero-background">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
-          <button class="modal-btn" type="button"data-modal-open>Order Service</button>
+          <button class="modal-btn" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <!-- Преимущества -->
@@ -399,17 +401,90 @@
             </li>
           </ul>
         </div>
+
+        <div class="footer-modal">
+          <p class="footer-modal-p">Subscribe</p>
+          <form class="footer-modal-form">
+            <input
+              type="email"
+              name="user-email"
+              class="footer-modal-form-input"
+              placeholder="E-mail"
+            />
+            <button type="submit" class="footer-modal-form-submit">
+              Subscribe
+              <svg class="footer-form-icon" width="24" height="24">
+                <use xlink:href="./images/sprite.svg#icon-telega-footer"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
     <!-- Модалка -->
-    <div class="backdrop is-hidden"data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
-          <svg class="icon-close-modal-btn" data-modal-close  width="8" height="8">
+          <svg
+            class="icon-close-modal-btn"
+            data-modal-close
+            width="8"
+            height="8"
+          >
             <use xlink:href="./images/sprite.svg#icon-close-modal-btn"></use>
           </svg>
         </button>
+
+        <form class="modal-form">
+          <p class="modal-p">Leave your contacts and we will call you back</p>
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc"> Name </span>
+            <span class="modal-form-input-wrapper">
+              <input type="text" name="user_name" class="modal-form-input" />
+              <svg class="modal-form-input-icon">
+                <use href="./images/sprite.svg#icon-person-form"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc"> Phone </span>
+            <span class="modal-form-input-wrapper">
+              <input type="tel" name="user_phone" class="modal-form-input" />
+              <svg class="modal-form-input-icon">
+                <use href="./images/sprite.svg#icon-phone-form"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field">
+            <span class="modal-form-input-desc"> Email </span>
+            <span class="modal-form-input-wrapper">
+              <input type="email" class="modal-form-input" />
+              <svg class="modal-form-input-icon">
+                <use href="./images/sprite.svg#icon-email-form"></use>
+              </svg>
+            </span>
+          </label>
+          <label class="modal-form-field-comment">
+            <span class="modal-form-input-desc"> Comment </span>
+            <textarea
+              name="user_comment"
+              class="modal-form-comment"
+              placeholder="Text input"
+            ></textarea>
+          </label>
+          <input
+            id="user-policy"
+            type="checkbox"
+            name="user_policy"
+            class="modal-form-chek visually-hiden"
+          />
+          <label for="user-policy" class="modal-form-chek-desc"
+            >I accept the terms and conditions of the&nbsp;
+            <a href="">Privacy Policy</a>
+          </label>
+          <button type="submit" class="modal-form-submit">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
