--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
           />
           <label for="user-policy" class="modal-form-chek-desc"
             >I accept the terms and conditions of the&nbsp;
-            <a href="">Privacy Policy</a>
+            <a class="modal-form-privacy-policy" href="">Privacy Policy</a>
           </label>
           <button type="submit" class="modal-form-submit">Send</button>
         </form>
